# ComfyUI-MiVolo-V2

./: .gitignore  README.md  README_zh.md  __init__.py  pyproject.toml  requirements.txt
examples/: MiVOLO-V2.json
py/: age_gender_node.py
